--- a/index.html
+++ b/index.html
@@ -556,7 +556,8 @@
           <div class="ent-status">UNDER CONSTRUCTION</div>
           <p class="ent-text">
             本作品は現在制作中です。<br class="pc-only" />
-            リンクの代替として、こちらのオーディオプレイヤーサイトを公開しています。
+            リンクの代替として、こちらのオーディオプレイヤーサイトを公開しています。<br />
+            【※曲名を選択すると音声が再生されます。】<br />ご注意ください。
           </p>
         </div>
         <button class="ent-enter-btn" onclick="terminateIntro()">
