add french music

--- a/index.html
+++ b/index.html
@@ -734,6 +734,16 @@
           ],
         },
         {
+          name: "Radio Paris",
+          artist: "French Republic",
+          img: "img/album04.png",
+          songs: [
+            { n: "Adieu Jolis Rêves D'Amour", s: "sound/f01.mp3" },
+            { n: "LamourEstCommeUneChanson", s: "sound/f02.mp3" },
+            { n: "Le Temps Des Cerises", s: "sound/f03.mp3" },
+          ],
+        },
+        {
           name: "Radio Moscow",
           artist: "Soviet Union",
           img: "img/album05.png",
