--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
       <div class="ent-info">
         <div class="ent-status">UNDER CONSTRUCTION</div>
         <p class="ent-text">
-          <span class="sp-text">本作品は現在制作中です。<br>オーディオプレイヤーを先行公開しています。</span>
+          <span class="sp-text">本作品は現在制作中です。<br>リンクの代替としてオーディオプレイヤーを公開しています。</span>
           <span class="pc-text">本作品は現在制作中です。<br>リンクの代替としてオーディオプレイヤーを公開しています。<br>【曲名選択で再生】音量にご注意ください。</span>
         </p>
       </div>
